name:          complexity
version:       0.1.3
cabal-version: >= 1.6
build-type:    Simple
stability:     experimental
author:        Roel van Dijk
maintainer:    vandijk.roel@gmail.com
copyright:     (c) 2009 Roel van Dijk
license:       BSD3
license-file:  LICENSE
category:      Testing
synopsis:      Empirical algorithmic complexity
description:
  Determine the complexity of functions by testing them on inputs of various sizes.

Extra-Source-Files: example.hs

library
  GHC-Options: -Wall
  build-depends: base                 >= 3.0.3.1 && < 4.4
               , base-unicode-symbols >= 0.2.1   && < 0.3
               , colour               >= 2.2.1   && < 2.4
               , data-accessor        >= 0.2     && < 0.3
               , deepseq              >= 1.1.0.1 && < 1.2
               , levmar               == 0.2.1
               , hstats               >= 0.3     && < 0.4
               , parallel             >= 3.1.0.1 && < 3.2
               , pretty               >= 1.0.1   && < 1.1
               , time                 >= 1.1.2.3 && < 1.3
               , transformers         >= 0.1.4   && < 0.3
  exposed-modules: Test.Complexity
                   , Test.Complexity.Config
                   , Test.Complexity.Experiment
                   , Test.Complexity.Main
                   , Test.Complexity.Monad
                   , Test.Complexity.Pretty
                   , Test.Complexity.Results
                   , Test.Complexity.Sensors
                   , Test.Complexity.Strategy
                   , Test.Complexity.Types
                   , Test.Complexity.Utils
  other-modules: Test.Complexity.Fit
               , Test.Complexity.Misc

executable example
  GHC-Options: -Wall
  build-depends: containers, array
  main-is: example.hs
