name:          complexity
version:       0.2
cabal-version: >= 1.6
build-type:    Simple
stability:     experimental
author:        Roel van Dijk <vandijk.roel@gmail.com>
maintainer:    Roel van Dijk <vandijk.roel@gmail.com>
copyright:     2009—2014 Roel van Dijk <vandijk.roel@gmail.com>
license:       BSD3
license-file:  LICENSE
category:      Testing
synopsis:      Empirical algorithmic complexity
description:
  Determine the complexity of functions by testing them on inputs of
  various sizes.

extra-source-files: example.hs

source-repository head
  type:     git
  location: git://github.com/roelvandijk/complexity.git

library
  ghc-options: -Wall
  build-depends: base                 >= 4       && < 5
               , base-unicode-symbols >= 0.2.2   && < 0.3
               , colour               >= 2.3.3   && < 2.4
               , Chart                >= 1.2.2   && < 1.3
               , Chart-gtk            >= 1.2.2   && < 1.3
               , criterion            >= 0.8.1   && < 0.9
               , data-default-class   >= 0.0.1   && < 0.1
               , deepseq              >= 1.3.0.2 && < 1.4
               , hmatrix              >= 0.15    && < 0.16
               , lens                 >= 4.1.2   && < 4.2
               , levmar               >= 1.2.1.4 && < 1.3
               , parallel             >= 3.2.0.4 && < 3.3
               , statistics           >= 0.11    && < 0.12
               , time                 >= 1.4.1   && < 1.5
               , transformers         >= 0.3     && < 0.5
               , vector               >= 0.10    && < 0.11

  exposed-modules: Test.Complexity
                 , Test.Complexity.Experiment
                 , Test.Complexity.Chart
                 , Test.Complexity.Main
                 , Test.Complexity.Sensors
                 , Test.Complexity.Strategy
                 , Test.Complexity.Types
  other-modules: Test.Complexity.Fit

executable example
  ghc-options: -Wall
  build-depends: containers, array
  main-is: example.hs
